// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toIncludeSameMembers > fails when array contents match 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toIncludeSameMembers([22m[32mexpected[39m[2m)[22m

Expected list to not exactly match the members of:
  [32mArray [
  1,
][39m
Received:
  [31mArray [
  1,
][39m"
`;

exports[`.toIncludeSameMembers > fails when the arrays are not equal in length 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toIncludeSameMembers([22m[32mexpected[39m[2m)[22m

Expected list to have the following members and no more:
  [32mArray [
  1,
][39m
Received:
  [31mArray [
  1,
  2,
][39m"
`;
